evoluido codigo e adicionado o swagger

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,17 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret.key=minha-chave-secreta
+
+
+# Configura o caminho para a interface do Swagger
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Configura o caminho para a definicao da API em JSON
+# Este caminho informa que o documento esta no formato OpenAPI v3
+springdoc.api-docs.path=/v3/api-docs
+
+# Informacoes gerais da sua API (aparecerao no topo da pagina do Swagger)
+springdoc.api-docs.info.title=Java API Projetos marcacao de ponto
+# Esta e a versao da SUA API
+springdoc.api-docs.info.version=1.0.0
+springdoc.api-docs.info.description= Projeto de marcacao de pontos fullstack com Java, Spring Boot, React e PostgreSQL.
